changes in all components

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -27,7 +27,7 @@
                     <div class="col border-start border-geay mb-5">
                         <div class="simple-thumb transation px-4">
                             <span class="h3 down-line text-general mb-4 d-table">01</span>
-                            <h5 class="my-3"><a href="#" class="text-secondary">Property Booking</a></h5>
+                            <h5 class="my-3"><a class="text-secondary">Property Booking</a></h5>
                             <p>Unlock your dream property with our simplified booking process.</p>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                     <div class="col border-start border-geay mb-5">
                         <div class="simple-thumb transation px-4">
                             <span class="h3 down-line text-general mb-4 d-table">02</span>
-                            <h5 class="my-3"><a href="#" class="text-secondary">Property Deal</a></h5>
+                            <h5 class="my-3"><a class="text-secondary">Property Deal</a></h5>
                             <p>Facilitating seamless property transactions through strategic innovation and impactful
                                 campaigns.</p>
                         </div>
@@ -49,7 +49,7 @@
 
 <!--============== Banner Start ==============-->
 <div class="full-row paraxify"
-    style="background-image: url(../../assets/assets/images/background/bg-4.png); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+    style="background-image: url(assets/assets/images/background/bg-4.png); background-repeat: no-repeat; background-position: center center; background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-xl-6 col-lg-8">
@@ -105,6 +105,93 @@
 </div>
 <!--============== Statistics Section End ==============-->
 
+
+
+<!--============== Statistics Section Start ==============-->
+<div class="full-row pb-0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="text-secondary mb-5">
+                    <span class="tagline-2 text-primary">Meet Our Corporate Team</span>
+                    <h2 class="text-secondary mb-4">Professional & Dedicated Team</h2>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="3block-carusel nav-disable owl-carousel">
+                    <div class="item border">
+                        <!-- Property Grid -->
+                        <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
+                            <div
+                                class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
+                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                        alt="Image Not Found!"></a>
+                            </div>
+                            <div class="property_text p-4">
+                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                </h5>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="item border">
+                        <!-- Property Grid -->
+                        <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
+                            <div
+                                class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
+                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                        alt="Image Not Found!"></a>
+                            </div>
+                            <div class="property_text p-4">
+                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                </h5>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="item border">
+                        <!-- Property Grid -->
+                        <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
+                            <div
+                                class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
+                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                        alt="Image Not Found!"></a>
+                            </div>
+                            <div class="property_text p-4">
+                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                </h5>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="item border">
+                        <!-- Property Grid -->
+                        <div class="property-grid-1 property-block bg-white transation-this hover-shadow ">
+                            <div
+                                class="overflow-hidden position-relative transation thumbnail-img bg-secondary hover-img-zoom">
+                                <a><img src="assets/assets/images/city/1601994595_shutterstock_15985529.webp"
+                                        alt="Image Not Found!"></a>
+                            </div>
+                            <div class="property_text p-4">
+                                <h5 class="listing-title"><a><b>fewrfwefrwe</b></a>
+                                </h5>
+                                <span class="listing-location"><i class="fas fa-map-marker-alt"></i> fwefwef </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--============== Statistics Section End ==============-->
+
+
 <!--============== Agents Start ==============-->
 <div class="full-row">
     <div class="container">
@@ -118,23 +205,23 @@
             <div class="col-lg-8">
                 <div class="row row-cols-md-4 row-cols-sm-2 row-cols-2 g-4 ">
                     <div class="col">
-                        <a href="#" class="hover-img-upshow overflow-hidden pe-5 d-block">
-                            <img src="../../assets/assets/images/partner/oh_logo_01-min.png" alt="creative template">
+                        <a class=" overflow-hidden pe-5 d-block">
+                            <img src="assets/assets/awards/vrb_logo.png" alt="creative template" style="height: 100px;width: 100%;">
                         </a>
                     </div>
                     <div class="col">
-                        <a href="#" class="hover-img-upshow overflow-hidden pe-5 d-block">
-                            <img src="../../assets/assets/images/partner/oh_logo_02-min.png" alt="creative template">
+                        <a class=" overflow-hidden pe-5 d-block">
+                            <img src="assets/assets/awards/Riyasat-or-png.png" alt="creative template" style="height: 100px;width: 100%;">
                         </a>
                     </div>
                     <div class="col">
-                        <a href="#" class="hover-img-upshow overflow-hidden pe-5 d-block">
-                            <img src="../../assets/assets/images/partner/oh_logo_03-min.png" alt="creative template">
+                        <a class=" overflow-hidden pe-5 d-block">
+                            <img src="assets/assets/awards/cropped-bhumija_logo-removebg-preview-1-1-247x95.png" alt="creative template" style="height: 100px;width: 100%;">
                         </a>
                     </div>
                     <div class="col">
-                        <a href="#" class="hover-img-upshow overflow-hidden pe-5 d-block">
-                            <img src="../../assets/assets/images/partner/oh_logo_04-min.png" alt="creative template">
+                        <a class=" overflow-hidden pe-5 d-block">
+                            <img src="assets/assets/awards/happy.png" alt="creative template" style="height: 100px;width: 100%;">
                         </a>
                     </div>
                 </div>
