--- a/src/app/agent-listing/agent-listing.component.html
+++ b/src/app/agent-listing/agent-listing.component.html
@@ -16,8 +16,8 @@
 </div>
 <!--============== Page title End ==============-->
 
-  <!--============== Agent Grid Section Start ==============-->
-  <div class="full-row pt-0 bg-light">
+<!--============== Agent Grid Section Start ==============-->
+<div class="full-row pt-0 bg-light">
     <div class="container">
         <div class="row">
 
@@ -25,21 +25,30 @@
                 <div class="row">
                     <div class="col">
                         <div class="woo-filter-bar p-3 d-flex flex-wrap justify-content-between">
-                            <div class="d-flex flex-wrap">
-                                <form class="woocommerce-ordering" method="get">
-                                    <select name="orderby1" (change)="getSorting($event)">
+                            <div class="d-flex align-items-center flex-wrap">
+                                    <!-- <select name="orderby1" (change)="getSorting($event)">
                                         <option disabled selected>Sort By :-</option>
                                         <option value="relevance">Relevance</option>
                                         <option value="asc">Name A-Z</option>
                                         <option value="desc">Name Z-A</option>
-                                    </select>
-                                </form>
+                                    </select> -->
+
+                                    <span>Sort By:-</span> &nbsp;
+                                    <div class="woocommerce-ordering" *ngIf="agentData?.length > 0">
+                                        <select name="orderby1" (change)="getSorting($event)">
+                                            <option value="relevance">Relevance</option>
+                                            <option value="asc">Name A-Z</option>
+                                            <option value="desc">Name Z-A</option>
+                                        </select>
+                                    </div>
                             </div>
                             <div class="d-flex">
-                                <span class="woocommerce-ordering-pages me-4 font-fifteen">Showing {{agentData?.length}} result</span>
+                                <span class="woocommerce-ordering-pages me-4 font-fifteen">Showing {{agentData?.length}}
+                                    result</span>
                                 <form class="view-category" method="get">
-                                    <button title="List" class="list-view" value="list" name="display" type="submit"><i class="flaticon-grid-1 flat-mini"></i></button>
-                                   
+                                    <button title="List" class="list-view" value="list" name="display" type="submit"><i
+                                            class="flaticon-grid-1 flat-mini"></i></button>
+
                                 </form>
                             </div>
                         </div>
@@ -53,12 +62,14 @@
                                 <div class="agent-level">
                                     <span title="Agenet level">{{item?.category}}</span>
                                 </div>
-                                <img src="{{baseUrl}}{{item?.image?.path}}" alt="Agent Photo" style="height: 300px; width: 100%;">
+                                <img src="{{baseUrl}}{{item?.image?.path}}" alt="Agent Photo"
+                                    style="height: 300px; width: 100%;">
                             </div>
                             <div class="entry-content-wrapper">
                                 <div class="entry-header d-flex pb-2">
                                     <div class="me-auto">
-                                        <h6 class="text-dark mb-0"><a routerLink="/agent-detail/{{item?._id}}">{{item?.userName}}</a></h6>
+                                        <h6 class="text-dark mb-0"><a
+                                                routerLink="/agent-detail/{{item?._id}}">{{item?.userName}}</a></h6>
                                     </div>
                                     <div class="customer-review ms-auto">
                                         <span class="text-primary font-fifteen">Age:- {{item?.age}}</span>
@@ -74,10 +85,11 @@
                                     <div class="agent">
                                         <a class="d-flex text-general align-items-center">
                                             <i class="fas fa-map-marker-alt text-primary"></i> &nbsp;
-                                           {{item?.address}}, {{item?.city}}, {{item?.state}}
+                                            {{item?.address}}, {{item?.city}}, {{item?.state}}
                                         </a>
                                     </div>
-                                    <div class="post-date ms-auto"><span><b>Completed Projects:-</b> {{item?.completedProject}}</span></div>
+                                    <div class="post-date ms-auto"><span><b>Completed Projects:-</b>
+                                            {{item?.completedProject}}</span></div>
                                 </div>
                             </div>
                         </div>
