--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
                         <a><img src="assets/assets/images/logo/logo-full-white.png"
                                 alt="Image not found!" /></a>
                     </div>
-                    <p>Awesome Real Estate Company for Housing and Construction.</p>
+                    <p>Explore handpicked properties perfectly suited to your needs through our straightforward sales process.</p>
                 </div>
                 <div class="footer-widget media-widget mb-4">
                     <a href="https://twitter.com/thebharatestate" target="_blank">
@@ -25,7 +25,7 @@
                 <div class="footer-widget contact-widget mb-4">
                     <h3 class="widget-title mb-4">Contact Info</h3>
                     <ul>
-                        <li>Unicoder Design Agency 301 The Greenhouse, Custard Factory, London, E3 8DY.</li>
+                        <li>Opp. Metro Piller No.16, Near Mansarovr Metro Station, Jaipur, Rajasthan.</li>
                         <li><span><i class="fas fa-phone"></i> &nbsp;</span>+91 95494-43222</li>
                         <li><span><i class="fas fa-phone"></i> &nbsp;</span>+91 93511-11622</li>
                         <li><span><i class="fas fa-envelope"></i> &nbsp;</span> Info@thebharatrealestate.com</li>
@@ -46,11 +46,9 @@
             </div>
             <div class="col">
                 <div class="footer-widget newslatter-widget mb-4">
-                    <h4 class="widget-title mb-4">Appointment</h4>
-                    <p>Litora ligula dapibus scelerisque vitae, fermentum aenean gravida lobortis mus pulvinar magna
-                        turient
-                        primis.</p>
-                    <a class="btn btn-primary w-100">Register Now</a>
+                    <h4 class="widget-title mb-4">Contact Us</h4>
+                    <p>Feel free to get in touch with us at your convenience; our team is here to assist you every step of the way.</p>
+                    <a class="btn btn-primary w-100" routerLink="/contact">Contact Now</a>
                 </div>
             </div>
         </div>
@@ -64,13 +62,6 @@
         <div class="row row-cols-md-2 row-cols-1">
             <div class="col">
                 <span class="text-white">© {{currentYear}} The Bharat Real Estate All right reserved</span>
-            </div>
-            <div class="col">
-                <ul class="line-menu float-end list-color-gray">
-                    <li><a>Privacy & Policy </a></li>
-                    <li>|</li>
-                    <li><a>Site Map</a></li>
-                </ul>
             </div>
         </div>
     </div>
