--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,9 +24,9 @@
                                                                 <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/about">About Us</a>
                                                                 </li>
-                                                                <li class="nav-item" routerLinkActive="active">
+                                                                <!-- <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/listing">Listing</a>
-                                                                </li>
+                                                                </li> -->
                                                                 <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/contact">Contact Us</a>
                                                                 </li>
@@ -66,9 +66,9 @@
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/about">About Us</a>
                                         </li>
-                                        <li class="nav-item" routerLinkActive="active">
+                                        <!-- <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/listing">Listing</a>
-                                        </li>
+                                        </li> -->
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/contact">Contact Us</a>
                                         </li>
